force-app/main/default/objects/IF_Program__c/IF_Program__c.object-meta.xml
<CustomObject>
    <description>인터페이스 관련정보 (endpoint 등 관리)</description>
    <label>IF_Program</label>
    <nameField>
        <label>No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>