force-app/main/default/objects/IF_Program__c/fields/AlamRecverList__c.field-meta.xml
<CustomField>
    <fullName>AlamRecverList__c</fullName>
    <description>알람수신자 리스트</description>
    <label>AlamRecverList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>