force-app/main/default/objects/IF_Program__c/fields/BatchClass__c.field-meta.xml
<CustomField>
    <fullName>BatchClass__c</fullName>
    <description>Batch Class</description>
    <label>BatchClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>