force-app/main/default/objects/IF_Program__c/fields/CallORBatch__c.field-meta.xml
<CustomField>
    <fullName>CallORBatch__c</fullName>
    <label>CallORBatch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>WebService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>