force-app/main/default/objects/IF_Program__c/fields/CalloutClass__c.field-meta.xml
<CustomField>
    <fullName>CalloutClass__c</fullName>
    <description>Callout Class</description>
    <label>CalloutClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>