force-app/main/default/objects/IF_Program__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Class Name</description>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>