force-app/main/default/objects/IF_Program__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <description>Cycle</description>
    <label>Cycle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>