force-app/main/default/objects/IF_Program__c/fields/DataCheck__c.field-meta.xml
<CustomField>
    <fullName>DataCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>데이터 체크 수행 여부</description>
    <label>DataCheck</label>
    <type>Checkbox</type>
</CustomField>