force-app/main/default/objects/IF_Program__c/fields/DataCheckCriticalValue__c.field-meta.xml
<CustomField>
    <fullName>DataCheckCriticalValue__c</fullName>
    <description>데이터 체크 기준 수량</description>
    <label>DataCheckCriticalValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>