force-app/main/default/objects/IF_Program__c/fields/DataCheckInterval__c.field-meta.xml
<CustomField>
    <fullName>DataCheckInterval__c</fullName>
    <description>수신 데이터 비교 시간 간격</description>
    <label>DataCheckInterval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>