force-app/main/default/objects/IF_Program__c/fields/DataCheckIntervalSp__c.field-meta.xml
<CustomField>
    <fullName>DataCheckIntervalSp__c</fullName>
    <description>수신 데이터 비교 시간 간격 단위</description>
    <label>DataCheckIntervalSp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>