force-app/main/default/objects/IF_Program__c/fields/DataCheckQuery__c.field-meta.xml
<CustomField>
    <fullName>DataCheckQuery__c</fullName>
    <description>데이터 체크 쿼리</description>
    <label>DataCheckQuery</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>