force-app/main/default/objects/IF_Program__c/fields/DataCheckSp__c.field-meta.xml
<CustomField>
    <fullName>DataCheckSp__c</fullName>
    <description>데이터 체크 구분</description>
    <label>DataCheckSp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>오브젝트</fullName>
            </value>
            <value>
                <fullName>쿼리</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>