force-app/main/default/objects/IF_Program__c/fields/deleteDays__c.field-meta.xml
<CustomField>
    <fullName>deleteDays__c</fullName>
    <description>deleteDays</description>
    <label>deleteDays</label>
    <type>Date</type>
</CustomField>