force-app/main/default/objects/IF_Program__c/fields/dummydate__c.field-meta.xml
<CustomField>
    <fullName>dummydate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>dummydate</description>
    <label>dummydate</label>
    <type>Checkbox</type>
</CustomField>