force-app/main/default/objects/IF_Program__c/fields/DummyObject__c.field-meta.xml
<CustomField>
    <fullName>DummyObject__c</fullName>
    <description>DummyObject</description>
    <label>DummyObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>