force-app/main/default/objects/IF_Program__c/fields/ExampleBody__c.field-meta.xml
<CustomField>
    <fullName>ExampleBody__c</fullName>
    <description>Example Body</description>
    <label>ExampleBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>