force-app/main/default/objects/IF_Program__c/fields/ExeInterval__c.field-meta.xml
<CustomField>
    <fullName>ExeInterval__c</fullName>
    <description>모니터링 간격</description>
    <label>ExeInterval</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>