force-app/main/default/objects/IF_Program__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Header</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>