force-app/main/default/objects/IF_Program__c/fields/HolidayCheckYN__c.field-meta.xml
<CustomField>
    <fullName>HolidayCheckYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>휴일수행여부</description>
    <label>HolidayCheckYN</label>
    <type>Checkbox</type>
</CustomField>