force-app/main/default/objects/IF_Program__c/fields/howmonth__c.field-meta.xml
<CustomField>
    <fullName>howmonth__c</fullName>
    <description>howmonth</description>
    <label>howmonth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>