force-app/main/default/objects/IF_Program__c/fields/IFObject__c.field-meta.xml
<CustomField>
    <fullName>IFObject__c</fullName>
    <description>데이터 체크 오브젝트</description>
    <label>IFObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>