force-app/main/default/objects/IF_Program__c/fields/IfResponseDataSaveYn__c.field-meta.xml
<CustomField>
    <fullName>IfResponseDataSaveYn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>인터페이스데이터저장여부</description>
    <label>IfResponseDataSaveYn</label>
    <type>Checkbox</type>
</CustomField>