force-app/main/default/objects/IF_Program__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isActive__c</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>