force-app/main/default/objects/IF_Program__c/fields/IsRealLogInsert__c.field-meta.xml
<CustomField>
    <fullName>IsRealLogInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Real Log Insert</description>
    <label>IsRealLogInsert</label>
    <type>Checkbox</type>
</CustomField>