force-app/main/default/objects/IF_Program__c/fields/LastDataChekDttm__c.field-meta.xml
<CustomField>
    <fullName>LastDataChekDttm__c</fullName>
    <description>수신 데이터 체크 시간</description>
    <label>LastDataChekDttm</label>
    <type>Date</type>
</CustomField>