force-app/main/default/objects/IF_Program__c/fields/LastExecChekDttm__c.field-meta.xml
<CustomField>
    <fullName>LastExecChekDttm__c</fullName>
    <description>프로그램 실행 체크 시간</description>
    <label>LastExecChekDttm</label>
    <type>Date</type>
</CustomField>