force-app/main/default/objects/IF_Program__c/fields/LogArchiveDays__c.field-meta.xml
<CustomField>
    <fullName>LogArchiveDays__c</fullName>
    <description>Log Archive Days</description>
    <label>LogArchiveDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>