force-app/main/default/objects/IF_Program__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Manager</description>
    <label>Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>