force-app/main/default/objects/IF_Program__c/fields/MonitoringTargetYn__c.field-meta.xml
<CustomField>
    <fullName>MonitoringTargetYn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>모니터링 대상여부</description>
    <label>MonitoringTargetYn</label>
    <type>Checkbox</type>
</CustomField>