force-app/main/default/objects/IF_Program__c/fields/Param2__c.field-meta.xml
<CustomField>
    <fullName>Param2__c</fullName>
    <description>Param2</description>
    <label>Param2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>