force-app/main/default/objects/IF_Program__c/fields/Param3__c.field-meta.xml
<CustomField>
    <fullName>Param3__c</fullName>
    <description>Param3</description>
    <label>Param3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>