force-app/main/default/objects/IF_Program__c/fields/Param4__c.field-meta.xml
<CustomField>
    <fullName>Param4__c</fullName>
    <description>Param4</description>
    <label>Param4</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>