force-app/main/default/objects/IF_Program__c/fields/ProgramNum__c.field-meta.xml
<CustomField>
    <fullName>ProgramNum__c</fullName>
    <description>Program No.</description>
    <label>ProgramNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>