force-app/main/default/objects/IF_Program__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1차</fullName>
            </value>
            <value>
                <fullName>2차</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>