force-app/main/default/objects/IF_Program__c/fields/RealtimeIfMonParam__c.field-meta.xml
<CustomField>
    <fullName>RealtimeIfMonParam__c</fullName>
    <description>모니터링 파라메터</description>
    <label>RealtimeIfMonParam</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>