force-app/main/default/objects/IF_Program__c/fields/RealtimeIfMonTargetYn__c.field-meta.xml
<CustomField>
    <fullName>RealtimeIfMonTargetYn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>실시간IF모니터링대상</description>
    <label>RealtimeIfMonTargetYn</label>
    <type>Checkbox</type>
</CustomField>