force-app/main/default/objects/IF_Program__c/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <description>TargetSystem</description>
    <label>TargetSystem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>