force-app/main/default/objects/IF_Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
            <value>
                <fullName>Batch(D&gt;C)</fullName>
            </value>
            <value>
                <fullName>Batch(C&gt;C)</fullName>
            </value>
            <value>
                <fullName>Interface(IB)</fullName>
            </value>
            <value>
                <fullName>Interface(OB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>