force-app/main/default/objects/IF_Program__c/fields/WebServiceType__c.field-meta.xml
<CustomField>
    <fullName>WebServiceType__c</fullName>
    <description>WebServiceType</description>
    <label>WebServiceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>